# voxelcraft

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-windows.ps1
src/: block.rs  chunk.rs  clouds.rs  daynight.rs  font.rs  hotbar.rs  interaction.rs  joseon.rs  main.rs  menu.rs  mesh.rs  particles.rs  player.rs  save.rs  texture.rs  viewmodel.rs  voxel.wgsl  voxel_material.rs  water.rs  water.wgsl  water_material.rs  world.rs
src/joseon/: checks.rs  compound.rs  gate.rs  hall.rs  mod.rs  path.rs  sign.rs  style.rs  water.rs
